# probconserv

./: README.md  mypy.ini  pyproject.toml
deep_pdes/attentive_neural_process/: anp.py  module.py  probconserv.py  softc.py
deep_pdes/datasets/: base.py  pbc.py  pme.py
deep_pdes/experiments/: 1b_pme_train_pinp_multi.sh  1b_pme_var_m.sh  2b_stefan_var_p.sh  3b_heat_var_c.sh  4b_advection_var_a.sh  5b_burgers_var_a.sh  analyze.py  generate.py  plots.py  train.py
deep_pdes/experiments/conf/: config.yaml
deep_pdes/experiments/conf/experiments/: 1b_pme_var_m.yaml  2b_stefan_var_p.yaml  3b_heat_var_c.yaml  4b_advection_var_a.yaml  5b_burgers_var_a.yaml
deep_pdes/experiments/conf/train/: 1b_pme_var_m_anp.yaml  1b_pme_var_m_physnp.yaml  1b_pme_var_m_physnp_fixedvar.yaml  1b_pme_var_m_physnp_re.yaml  1b_pme_var_m_physnp_rhs.yaml  1b_pme_var_m_pinp.yaml  1b_pme_var_m_pinp_1e1.yaml  1b_pme_var_m_pinp_1e2.yaml  1b_pme_var_m_pinp_1e6.yaml  1b_pme_var_m_pinp_1en1.yaml  1b_pme_var_m_pinp_1en2.yaml  2b_stefan_var_p_anp.yaml  2b_stefan_var_p_physnp.yaml  2b_stefan_var_p_physnp_fixedvar.yaml  2b_stefan_var_p_physnp_re.yaml  2b_stefan_var_p_pinp.yaml  3b_heat_var_c_anp.yaml  3b_heat_var_c_pinp.yaml  4b_advection_var_a_anp.yaml  4b_advection_var_a_pinp.yaml  5b_burgers_var_a_anp.yaml  5b_burgers_var_a_pinp.yaml
deep_pdes/experiments/output/paper/1b_pme_var_m/datasets/: test.pt  train.pt  valid.pt
deep_pdes/experiments/output/paper/1b_pme_var_m/train/: anp.pt  physnp.pt  pinp.pt
resources/: stefan_shock_position_downstream_task  stefan_solution_profile_UQ
tests/: test_pme.py
(+6 files in other folders)
